--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,6 +29,12 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>We need to use the microphone</string>
 
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to use the lcoation</string>
+
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need to use the location of your device</string>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
