--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   path_provider: ^2.0.2
   path: ^1.8.0
   sqflite: ^2.0.0+4
+  location: ^4.3.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
